[gd_scene load_steps=47 format=3 uid="uid://cjbjxqe0ihb15"]

[ext_resource type="Texture2D" uid="uid://cjfv6a5g7lalx" path="res://assets/Sprites/Player/Lam-Ang/lam-ang idle spritesheet.png" id="1_kctci"]
[ext_resource type="Script" uid="uid://dk6puy4b2sbdv" path="res://scenes/Player/Lam-Ang/scripts/player.gd" id="1_kipck"]
[ext_resource type="Texture2D" uid="uid://cuh6yk0x63a31" path="res://assets/Sprites/Player/Lam-Ang/lam-ang iswing sword angry spritesheet.png" id="2_6guch"]
[ext_resource type="Script" uid="uid://23sujqxi4sbs" path="res://scripts/state_machine.gd" id="3_d2fek"]
[ext_resource type="Texture2D" uid="uid://bakpuu55p0koy" path="res://assets/Sprites/Player/Lam-Ang/lam-ang hurt _w sword spritesheet.png" id="3_hdvrl"]
[ext_resource type="Script" uid="uid://cikaltyvi5hgx" path="res://scenes/Player/Lam-Ang/scripts/States/player_walk.gd" id="3_y7i74"]
[ext_resource type="Texture2D" uid="uid://oxn84k4imbi0" path="res://assets/Sprites/Player/Lam-Ang/lam-ang front walk spritesheet.png" id="5_yjrhp"]
[ext_resource type="Texture2D" uid="uid://cu15wc0ovhtbg" path="res://assets/Sprites/Player/Lam-Ang/lam-ang side walk spritesheet.png" id="6_b86wg"]
[ext_resource type="Texture2D" uid="uid://d65qmc8oqme1" path="res://assets/Sprites/Player/Lam-Ang/lam-ang back walk spritesheet.png" id="7_ms58j"]
[ext_resource type="PackedScene" uid="uid://uafwmj20exb5" path="res://scenes/components/health_component.tscn" id="8_ues50"]
[ext_resource type="PackedScene" uid="uid://us43fp04gv7s" path="res://scenes/components/hitbox_component.tscn" id="9_b42le"]
[ext_resource type="Script" uid="uid://iuonoxodusxm" path="res://scenes/Player/Lam-Ang/scripts/States/player_idle.gd" id="10_hdvrl"]
[ext_resource type="PackedScene" uid="uid://b60n5nv8v32p2" path="res://scenes/class/sword.tscn" id="10_t3l7m"]
[ext_resource type="Script" uid="uid://cnvqgq1t2eveg" path="res://scenes/Player/Lam-Ang/scripts/States/player_idle_side.gd" id="11_yjrhp"]
[ext_resource type="Script" uid="uid://7un48pvp5rtb" path="res://scenes/Player/Lam-Ang/scripts/States/player_idle_back.gd" id="12_b86wg"]
[ext_resource type="Script" uid="uid://b2v4uyt2ucery" path="res://scenes/Player/Lam-Ang/scripts/States/player_attack.gd" id="15_b42le"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ues50"]
atlas = ExtResource("2_6guch")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b42le"]
atlas = ExtResource("2_6guch")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3l7m"]
atlas = ExtResource("2_6guch")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdi8f"]
atlas = ExtResource("3_hdvrl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb7ny"]
atlas = ExtResource("3_hdvrl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwx1o"]
atlas = ExtResource("3_hdvrl")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kipck"]
atlas = ExtResource("1_kctci")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7i74"]
atlas = ExtResource("1_kctci")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2fek"]
atlas = ExtResource("1_kctci")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jp5j"]
atlas = ExtResource("1_kctci")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi0ec"]
atlas = ExtResource("5_yjrhp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2621k"]
atlas = ExtResource("5_yjrhp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2gw3"]
atlas = ExtResource("6_b86wg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvt4l"]
atlas = ExtResource("6_b86wg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v23w"]
atlas = ExtResource("6_b86wg")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nyfu"]
atlas = ExtResource("6_b86wg")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_go7tf"]
atlas = ExtResource("7_ms58j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fqhr"]
atlas = ExtResource("7_ms58j")
region = Rect2(0, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kik3y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ues50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b42le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3l7m")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdi8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb7ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwx1o")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kipck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7i74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2fek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jp5j")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi0ec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2621k")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2gw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvt4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v23w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nyfu")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_go7tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fqhr")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kipck"]
size = Vector2(16, 8)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t3l7m"]
radius = 9.0

[sub_resource type="Animation" id="Animation_8v1ud"]
resource_name = "attack"
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.56666666, 0.8333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sword/AttackHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5667, 0.8334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StateMachine/PlayerAttack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"perform_attack"
}]
}

[sub_resource type="Animation" id="Animation_5jp5j"]
resource_name = "idle"
length = 1.3
loop_mode = 1
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.26666668, 0.53333336, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sword/AttackHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ms58j"]
resource_name = "IdleBack"
step = 0.0333

[sub_resource type="Animation" id="Animation_b86wg"]
resource_name = "IdleSide"
step = 0.0333

[sub_resource type="Animation" id="Animation_kik3y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sword/AttackHitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ift0q"]
resource_name = "Walk_Down"
length = 0.4
loop_mode = 1
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sword")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_cp2oh"]
resource_name = "Walk_Side"
length = 0.8
loop_mode = 1
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk_side"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_m0e2k"]
resource_name = "Walk_Up"
length = 0.4
loop_mode = 1
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dgc14"]
_data = {
&"Attack": SubResource("Animation_8v1ud"),
&"Idle": SubResource("Animation_5jp5j"),
&"Idle_Back": SubResource("Animation_ms58j"),
&"Idle_Side": SubResource("Animation_b86wg"),
&"RESET": SubResource("Animation_kik3y"),
&"Walk_Down": SubResource("Animation_ift0q"),
&"Walk_Side": SubResource("Animation_cp2oh"),
&"Walk_Up": SubResource("Animation_m0e2k")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "health") groups=["Player"]]
collision_mask = 72
script = ExtResource("1_kipck")
sprite = NodePath("AnimatedSprite2D")
health = NodePath("HealthComponent")
attack_damage = 100.0
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kik3y")
animation = &"idle"
autoplay = "idle"
frame = 1
flip_h = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 11)
shape = SubResource("RectangleShape2D_kipck")
metadata/_edit_lock_ = true

[node name="HealthComponent" parent="." node_paths=PackedStringArray("healthbar", "base") instance=ExtResource("8_ues50")]
MAX_HEALTH = 100.0
healthbar = NodePath("../HealthBar")
base = NodePath("..")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("9_b42le")]
collision_layer = 5
collision_mask = 88
health_component = NodePath("../HealthComponent")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_t3l7m")

[node name="Sword" parent="." instance=ExtResource("10_t3l7m")]
position = Vector2(-11, 5)
collision_layer = 2
collision_mask = 32

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dgc14")
}
autoplay = "Idle"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_d2fek")
initial_state = NodePath("PlayerWalk")

[node name="PlayerWalk" type="Node" parent="StateMachine" node_paths=PackedStringArray("animator")]
script = ExtResource("3_y7i74")
animator = NodePath("../../AnimationPlayer")

[node name="PlayerIdle" type="Node" parent="StateMachine" node_paths=PackedStringArray("animator")]
script = ExtResource("10_hdvrl")
animator = NodePath("../../AnimationPlayer")

[node name="PlayerIdleSide" type="Node" parent="StateMachine"]
script = ExtResource("11_yjrhp")

[node name="PlayerIdleBack" type="Node" parent="StateMachine"]
script = ExtResource("12_b86wg")

[node name="PlayerAttack" type="Node" parent="StateMachine" node_paths=PackedStringArray("animator", "hitbox_area")]
script = ExtResource("15_b42le")
animator = NodePath("../../AnimationPlayer")
hitbox_area = NodePath("../../HitboxComponent")
attack_damage = 100.0

[node name="misc" type="Label" parent="."]
visible = false
offset_left = 9.0
offset_top = -38.0
offset_right = 79.0
offset_bottom = -15.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Restart..."

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -47.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = -21.0

[editable path="Sword"]
